# sagemaker-hyperpod-cli

doc/: README.md  slurm-cluster-management.md
hyperpod-slurm-cluster-template/: README.md  pyproject.toml
hyperpod-slurm-cluster-template/hyperpod_slurm_cluster_template/: __init__.py  registry.py
hyperpod-slurm-cluster-template/hyperpod_slurm_cluster_template/v1_0/: __init__.py  model.py  schema.json  template.py
src/sagemaker/hyperpod/cli/: __init__.py  hyp_cli.py  slurm_cluster_config.py  slurm_cluster_utils.py
src/sagemaker/hyperpod/cli/commands/: init.py  slurm_cluster.py
src/sagemaker/hyperpod/cli/constants/: init_constants.py
src/sagemaker/hyperpod/cli/validators/: slurm_validator.py
test/integration_tests/slurm_cluster/: __init__.py  test_slurm_cluster_lifecycle.py  test_slurm_init_experience.py
test/property_tests/slurm_cluster/: __init__.py  test_api_properties.py  test_config_properties.py
